# brownian-motion-simulator

./: .gitignore  README.md  pyproject.toml
configs/: default.json
src/particle_sim/: __init__.py  analysis.py  cli.py  io_utils.py  simulate.py  viz.py
tests/: test_simulate.py
